# Python-Repo-Template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: README.md  copilot-instructions.md  dependabot.yaml
.github/prompts/: new-project.prompt.md
.github/workflows/: template.yaml
tests/: test_pkg.py  test_test_package.py
