[build-system]
requires = ["setuptools", "setuptools-scm>=10.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-name"
dynamic = ["dependencies","version"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=6",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
version_file = "src/pkg/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.ruff.format]
quote-style = "double"
